--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<!-- <a href="#" class="icon solid fa-home"><span>Home</span></a> -->
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#work2" class="icon solid fa-folder"><span>Work</span></a>
+                        <a href="#work1" class="icon solid fa-folder"><span>Work</span></a>
 						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
 					</nav>
@@ -40,9 +41,34 @@
 									<img src="images/me.jpg" alt="" />
 								</a>
 							</article> -->
+                        
+                        <!-- Work -->
+							<article id="work2" class="panel">
+								<header>
+									<h1>Statistical Methods in Data Mining</h1>
+									<br>
+									<h2>Project 2</h2>
+									<h3>Clustering of Ventricular Fibrillation</h3>
+								</header>
+								<p>
+                                    In this work, we aim at studying the suitability of clustering methods to predict if a patient has developed a specific complication or not. 
+                                    To this end, we resort to the same dataset used in Project 1 and explore different clustering algorithms, namely partition, hierarchical, density-based and spectral, attempting to separated the data into two clusters: one that represents the patients with Myocardial Infarction who have developed ventricular fibrillation at the end of the second day after admission to the hospital, and the ones who have not developed this complication.
+                                    Given that now we treating the problem as being unsupervised, we pretend we do not have prior knowledge of the binary explanatory variable, and consider the results of the clustering as our true label for classification.
+                                    Nonetheless, taking into consideration this work is exploratory and purely academic, we also assess the accuracy of the clusters created, i.e., compare the clusters with the actual true labels of the original dataset.
+								</p>
+								<p>
+									Below you will find the notebook with the R code developed to achieve the previously mentioned goals.
+								</p>
+                                <button type="button" onclick="document.location='RNotebook2/RNotebook.html'">R Notebook</button>
+                                <br>
+                                <br>
+                                <p>
+									This work was developed by Group 4: <br> Inês Pereira | 77059<br> André Roque | 86694<br> Carolina Ruivo | 98540<br> André Luís | 98638 
+								</p>
+							</article>
 
 						<!-- Work -->
-							<article id="work" class="panel">
+							<article id="work1" class="panel">
 								<header>
 									<h1>Statistical Methods in Data Mining</h1>
 									<br>
